--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lc-apollo-js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "scripts": {
     "build": "node scripts/clean.mjs; tsc; node scripts/copyPackets.mjs;",
@@ -26,5 +26,10 @@
     "special",
     "patches",
     "tsconfig.json"
-  ]
+  ],
+  "pnpm": {
+    "patchedDependencies": {
+      "@buf/lunarclient_apollo.bufbuild_es@1.9.0-20240525042717-1da7022e8b79.1": "patches/@buf+lunarclient_apollo.bufbuild_es+1.9.0-20240525042717-1da7022e8b79.1.patch"
+    }
+  }
 }
